--- a/css/style.css
+++ b/css/style.css
@@ -556,7 +556,6 @@ experience h3 {
   }
   
   .col-12, .col-md-6 {
-      text-align: center;
   }
   .review-mobile{
     display: block;
@@ -618,5 +617,60 @@ experience h3 {
   font-weight: 400;
   font-family: Roboto;
   line-height: 25.6px;
+}
+section {
+  padding: 20px 0;
+
+  text-align: 
+}
+.icon {
+  margin-left: 10px;
+  font-size: 20px;
+  margin-right: 15px;
+}
+.navbar-brand.logo {
+  font-family: "Chewy";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 31.36px;
+}
+#img-footer {
+  width: 30px;
+  height: 30px;
+}
+@media (max-width: 767.98px) {
+  .review-section .col-md-5,
+  .review-section .col-md-7 {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .review-section .col-md-7 .col-md-4 {
+    margin-bottom: 15px;
+  }
+
+  .review-section .col-md-5 .my-5 {
+    margin-bottom: 30px;
+  }
+
+  .review-section .header-img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .review-section .text-md-end {
+    text-align: center !important;
+  }
+  #img-footer {
+    width: 30px;
+    height: 30px;
+    border-radius: 50% !important;
+  }
+  #first{
+    margin-right: -30px !important;
+  }
+  #middle{
+    margin-right: 20px !important;
+  }
 }
 
