--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ body {
   width: 100%;
   overflow-x: hidden !important;
 }
- section{
+section {
   overflow-y: hidden;
- }
+}
 .navbar-toggler {
   border: none !important;
   outline: none !important;
@@ -58,27 +58,37 @@ header {
 }
 
 /* /////// Second Row Of Header ////////// */
+.Second-row {
+  border-top: 1px solid #eafaf1 !important;
+  padding-top: 25px;
+}
 .logo {
   font-weight: 600;
   text-decoration: none;
-  background: linear-gradient(90deg, #c208c2, rgb(0, 204, 255));
+  background: linear-gradient(90deg, #cc6dea, #5be2e4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 .active-link {
-  color: #e700e7 !important;
+  color: #cc6dea !important;
+  position: relative;
 }
+#active {
+  color: #cc6dea !important;
+  font-weight: 600 !important;
+  margin-top: -10px !important;
+}
+
 .nav-item a {
   text-decoration: none;
-  margin-top: 3px;
-  padding: 10px;
-  color: rgb(31, 30, 30);
-  margin-top: -3px;
-  margin-right: 20px !important;
-}
-.nav-item a:hover {
-  transition: 1.1s;
+  margin-right: 0px !important;
+  font-family: Roboto !important;
+  font-size: 20px !important;
+  font-weight: 300 !important;
+  color: #000000 !important;
+  line-height: 23.44px !important;
+  cursor: default !important;
 }
 .srart {
   background-color: #cc6dea;
@@ -88,10 +98,10 @@ header {
   font-size: 13px;
   font-weight: 500;
   letter-spacing: 1px;
-  cursor: pointer;
+  cursor: default !important;
 }
-.srart:hover {
-  background-color: #bc44e0;
+.header-button {
+  margin-top: -20px;
 }
 .srart:hover {
   box-shadow: 0px 4px 10px rgba(173, 216, 230, 0.8);
@@ -105,32 +115,30 @@ header {
   font-weight: 600;
   cursor: pointer;
 }
-
-.active-link {
-  color: #e700e7 !important;
-  position: relative;
-}
 .active-link::after {
   content: "";
   position: absolute;
-  bottom: 0px;
+  bottom: -5px;
   left: 50%;
   transform: translateX(-50%);
-  width: 8px;
-  height: 8px;
-  background-color: #e700e7;
+  width: 5px;
+  height: 5px;
+  background-color: #cc6dea !important;
   border-radius: 50%;
 }
 @media (max-width: 768px) {
   .active-link::after {
     bottom: auto;
     top: 50%;
-    left: 20%;
+    left: 18%;
     transform: translateY(-50%) translateX(-50%);
-    width: 8px;
-    height: 8px;
-    background-color: #e700e7;
+    width: 5px;
+    height: 5px;
+    background-color: #cc6dea !important;
     border-radius: 50%;
+  }
+  .header-button {
+    margin-top: 0px !important;
   }
 }
 
@@ -138,7 +146,7 @@ header {
 .main {
   min-height: 100vh;
   width: 100%;
-  background-image: url(../images/HERO\ BANNER\ \(1\).png);
+  background-image: url(../images/hero.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -165,6 +173,9 @@ header {
     background-size: cover;
     overflow-x: hidden !important;
   }
+  .about {
+    width: 98% !important;
+  }
   .main-text {
     margin-left: -60px !important;
     margin-top: 280.42px !important;
@@ -176,7 +187,7 @@ header {
     margin-right: 0 !important;
     margin-left: auto !important;
   }
-  .child1 img{
+  .child1 img {
     width: 420.9px !important;
     height: 626.07px !important;
     top: 344.89px !important;
@@ -223,7 +234,7 @@ header {
   padding: 16px;
   gap: 8px;
   border-radius: 8px;
-  background-color: #5BE2E4;
+  background-color: #5be2e4;
   color: #fff;
   font-family: Chewy;
   font-weight: 400;
@@ -231,7 +242,7 @@ header {
   line-height: 24px;
 }
 .main-btn:hover {
-  background-color: #CC6DEA;
+  background-color: #cc6dea;
   transition: 1s;
   cursor: default;
 }
@@ -273,7 +284,7 @@ header {
   color: #800280;
 }
 .srart-learning {
-  background-color: #e700e7;
+  background-color: #cc6dea;
   color: #fff;
   border-radius: 20px;
   font-weight: 500;
@@ -283,18 +294,15 @@ header {
   height: 80px;
 }
 .img-fluid {
-  max-width: 100%;
-  height:399px !important;
+  min-width: 100%;
+  height: 399px !important;
   margin-top: 20px !important;
 }
-.srart-learning:hover {
-  background-color: #c208c2;
-}
-.slideshow-container{
-  width: 600px ;
+.slideshow-container {
+  width: 600px;
   height: 403px;
 }
-.for-student{
+.for-student {
   font-size: 32px !important;
   line-height: 37.5px !important;
   font-weight: 600 !important;
@@ -303,20 +311,26 @@ header {
 }
 @media (max-width: 768px) {
   .srart-learning {
-    width: 150px;
-    height: 45px;
+    width: 127px;
+    height: 33px;
     font-weight: 500 !important;
     font-size: 11px !important;
+    font-family: Roboto !important;
     line-height: 12.89px !important;
+  }
+  .img-fluid {
+    min-width: 100%;
+    height: 200px !important;
   }
   .for-student {
     font-size: 16px !important;
     line-height: 18.75px !important;
     font-weight: 600 !important;
-    margin-top: 80px !important;
+    margin-top: -40px !important;
     letter-spacing: 2px !important;
   }
-  .about-info-h2, .about-info-h2 span {
+  .about-info-h2,
+  .about-info-h2 span {
     font-size: 32px !important;
     line-height: 37.6px !important;
   }
@@ -328,8 +342,11 @@ header {
   }
   .about-img-12 {
     margin-top: -40px !important;
-    width: 600px ;
+    width: 600px;
     height: 1000px;
+  }
+  #new {
+    margin-top: -180px !important;
   }
   .main-text {
     margin-left: 0px;
@@ -337,10 +354,18 @@ header {
   .main-text h2 {
     font-size: 30px !important;
   }
-  .every, .can-do, .conver {
+  .every,
+  .can-do,
+  .conver {
     font-weight: 500 !important;
     font-size: 20px !important;
     line-height: 32px !important;
+  }
+  .every {
+    color: #104728 !important;
+  }
+  #Learn-more {
+    color: #472652 !important;
   }
   .conver {
     font-weight: 700 !important;
@@ -357,36 +382,36 @@ header {
   .about-link {
     font-weight: 400 !important;
     font-size: 16px !important;
-    line-height: 28.8px !important; 
-    color: #472652  !important;
+    line-height: 28.8px !important;
+    color: #472652 !important;
     margin-right: 40px !important;
   }
-  .slideshow-container #slideshow-img{
-    height: 100% ;
+  .slideshow-container #slideshow-img {
+    height: 100%;
   }
-  .slideshow-vidoe{
-    height: 399px !important;
+  .slideshow-vidoe {
+    height: 226.32px !important;
     width: 600px;
-  
+
   }
   .teacher-img {
     width: 100% !important;
     height: 100% !important;
-   
-    border-radius:  10px !important;
+
+    border-radius: 10px !important;
   }
   .imge-about {
     margin: 20px 0px !important;
   }
   .main-footer {
-    background: linear-gradient(#CC6DEA , #5BE2E4);
+    background: linear-gradient(#cc6dea, #5be2e4);
   }
 }
-.video-about{
+.video-about {
   width: 100%;
   margin-top: 100px;
 }
-.video-about .teacher-img{ 
+.video-about .teacher-img {
   width: 100%;
 }
 
@@ -400,15 +425,15 @@ header {
   font-weight: 600;
   font-size: 24px;
   line-height: 33.6px;
-  color: #0F172A;
+  color: #0f172a;
 }
 .about-link2 {
-  color: #CC6DEA;
+  color: #cc6dea;
   font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 22.4px;
-  margin-right: 70px !important;
+  text-decoration: none;
 }
 
 /* /////////////////////// */
@@ -485,7 +510,7 @@ header {
 
 .cross1:hover,
 .cross2:hover {
-  background-color: #a70aa7 !important;
+  background-color: #a70aa79f !important;
 }
 
 .courses-section {
@@ -496,7 +521,8 @@ header {
   font-family: Chewy;
   font-weight: 400;
   font-size: 40px;
-  color: #CC6DEA;
+  color: #cc6dea;
+  margin-top: 100px !important;
 }
 
 .review-span {
@@ -508,92 +534,113 @@ header {
   display: block;
   margin-top: 10px;
 }
-.review-mobile{
+.review-mobile {
   display: none;
 }
-.review-comp{
+.review-comp {
   display: block;
 }
 .img-fluid {
   max-width: 100%;
   height: auto;
 }
-.review-mobile span{
+.review-mobile span {
   text-align: start;
 }
-experience h3 {
+.experience h3 {
   font-size: 48px;
 }
-.Clients , Clients div{
+.Clients,
+.Clients div {
   font-size: 18px;
+  font-weight: 700 !important;
+  line-height: 20px !important;
+  font-style: italic !important;
 }
-.experience-parent {
-gap: 20px;
+.fa-star {
+  color: #eab308 !important;
 }
 
 @media (max-width: 768px) {
+  .courses-section {
+    padding-top: 30px;
+    overflow-x: hidden !important;
+  }
   .courses-header-text {
-      font-size: 20px !important;
+    font-size: 20px !important;
   }
-  
-  .review-text {
-      font-size: 18px !important;
-      text-align: start;
-      text-wrap: nowrap;
-  }
-  
-  .review-span {
-      font-size: 14px;
-      text-align: center;
-  }
-  
 
-  .review-mobile{
+  .review-text {
+    font-size: 16px !important;
+    text-align: start;
+    text-wrap: nowrap;
+    font-weight: 400 !important;
+    line-height: 18px !important;
+    margin-top: 25px !important;
+  }
+  #content {
+    margin-top: -10px !important;
+  }
+  .review-span {
+    font-size: 10px !important;
+    font-weight: 400 !important;
+    line-height: 11.72px !important;
+    font-family: Roboto !important;
+    color: #00000080 !important;
+    margin-top: -5px !important;
+    text-align: center;
+  }
+  .about-link2 {
+    margin-right: 10px !important;
+  }
+  .review-mobile {
     display: block;
     width: 70%;
-    margin-left:15px;
-
+    margin-left: 15px;
   }
-  .review-img-parent{
-  width: 40%;
-  height: auto; 
+  .review-img-parent {
+    width: 40%;
+    height: auto;
   }
-  .review-img-parent img{
+  .review-img-parent img {
     width: 100%;
     height: 100% !important;
   }
-  .review-comp{
+  .review-comp {
     display: none;
   }
   .experience {
     text-align: start !important;
   }
 
-  .review-right-h3{
+  .review-right-h3 {
     font-weight: 700 !important;
-    font-size: 35px !important;
+    font-size: 15px !important;
     font-family: IBM Plex Sans !important;
     line-height: 48px !important;
   }
 
-  .review-span-2{
+  .review-span-2 {
     text-align: start !important;
+    font-size: 10px !important;
+    font-weight: 400 !important;
+    line-height: 24px !important;
+    text-align: start !important;
+  }
+  .Jacob2 {
+    color: #000000 !important;
+  }
+  .experience h3 {
+    font-size: 18px !important;
+  }
+
+  .Clients,
+  Clients div {
     font-size: 14px !important;
-    line-height: 10px;
-    text-align: start !important;
+    font-style: italic !important;
+    line-height: 20px !important;
   }
-  experience h3 {
-   font-size: 18px !important;
-  }
-
-  .Clients , Clients div{
-    font-size: 14px;
-    
-  }
-  
 }
-
-
 
 @media (max-width: 1030px) {
   .review-card {
@@ -603,11 +650,36 @@ gap: 20px;
 
 @media (max-width: 654px) {
   .review-card {
-    width: 95% !important;
+    width: 98% !important;
   }
-  .courses-header-text{
+  .courses-header-text {
     margin: 0 5px !important;
   }
+  .review-img-parent img {
+    width: 123.97px !important;
+    height: 140.12px !important;
+  }
+  .card-span {
+    font-size: 12px !important;
+  }
+}
+
+.clear-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #667085;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #667085;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.clear-icon .fas {
+  font-size: 12px;
+}
+.box-shadow {
+  box-shadow: 0px 4px 10px rgba(173, 216, 230, 0.8);
 }
 
 .about-review-info-card-span {
@@ -617,10 +689,6 @@ gap: 20px;
   font-family: Roboto;
   line-height: 25.6px;
 }
-/* section {
-  padding: 20px 0;
-
-} */
 .icon {
   margin-left: 10px;
   font-size: 20px;
@@ -636,15 +704,13 @@ gap: 20px;
   width: 30px;
   height: 30px;
 }
-#first{
+#first {
   margin-right: -30px !important;
-
 }
-#middle{
+#middle {
   margin-right: 20px !important;
-
 }
-#last{
+#last {
   margin-right: 20px;
 }
 
@@ -654,7 +720,8 @@ gap: 20px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  #middle , #first {
+  #middle,
+  #first {
     font-size: 18px;
   }
 
@@ -675,28 +742,27 @@ gap: 20px;
     height: 30px;
     border-radius: 50% !important;
   }
-  #first{
+  #first {
     margin-right: 0px !important;
   }
-  #middle{
+  #middle {
     margin-right: 0px !important;
     margin-left: -20px;
   }
 
-
-  .Footer-text{
+  .Footer-text {
     font-size: 20px !important;
     font-weight: 400 !important;
     font-family: Chewy !important;
   }
-  .Footer-span{
+  .Footer-span {
     font-weight: 400 !important;
     font-size: 14px !important;
     font-family: Roboto !important;
   }
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   display: none !important;
 }
 .col-md-7 {
@@ -715,18 +781,18 @@ gap: 20px;
   display: flex;
   flex-direction: column;
 }
-.explore-parent-1{
+.explore-parent-1 {
   display: flex;
   gap: 10px;
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
 }
- .explore-parent{
-display: flex;
-justify-content: space-between;
-gap: 10px;
-width: 60%;
+.explore-parent {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  width: 60%;
 }
 
 .explore {
@@ -751,20 +817,22 @@ width: 60%;
     flex: 1 1 calc(50% - 20px);
     max-width: calc(50% - 20px);
   }
-  .explore-parent .e2{
-
+  .explore-parent .e2 {
     font-size: 16px !important;
-
   }
-  .explore-parent{
+  .explore-parent {
     width: 90%;
     gap: 15px;
   }
-  #middle h2 , #first h2 , #last h2{
+  #middle h2,
+  #first h2,
+  #last h2 {
     font-size: 18px !important;
   }
 
-  #middle p  , #first p , #last p{
+  #middle p,
+  #first p,
+  #last p {
     font-size: 15px !important;
   }
 }
@@ -774,5 +842,38 @@ width: 60%;
   .col-4 {
     flex: 1 1 100%;
     max-width: 100%;
+  }
+}
+.circle {
+  position: absolute;
+  width: 61.34px;
+  height: 61.34px;
+  border-radius: 50%;
+  background-color: #efe7f9;
+  z-index: -1;
+  margin-top: 4px;
+  margin-left: -8px;
+}
+.circle2{
+  width: 25.21px;
+  height: 25.41px;
+  right: 60px;
+  margin-top: -105px;
+}
+@media (max-width: 768px) {
+  .circle {
+    width: 30.24px;
+    height: 30.24px;
+    margin-top: 47px;
+    margin-left: -15px;
+  }
+  .every{
+    margin-left: -15px !important;
+  }
+  .circle2{
+    width: 11.68px;
+    height: 11.77px;
+    margin-top: -50px !important;
+    right: 20px;
   }
 }
