--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ nav {
 
 /* //////////// Main Section //////////////// */
 .main {
-  width: 100%;
+  max-width: 100%;
   background-image: url(../images/hero.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -229,7 +229,6 @@ nav {
   .child1 {
     display: flex !important;
     justify-content: flex-end !important;
-    margin-top: -60px !important;
     margin-right: 0 !important;
     margin-left: auto !important;
   }
@@ -1205,7 +1204,7 @@ nav {
 }
 @media (max-width: 1200px) {
   .container2{
-    max-width: 1100px !important;
+    max-width: 1000px !important;
   }
 }
 
